# nix-gc-s3

./: .gitignore  README.md  default.nix  flake.nix  nix-gc-s3.nix  pyproject.toml  result  shell.nix
.github/workflows/: check.yml  update.yml
nix_gc_s3/: main.py
src/nix_gc_s3/: main.py
