[tool.poetry]
name = "nix-gc-s3"
version = "0.0.2"
description = "A naive nix gc implementation for s3 store."
authors = ["Lin Yinfeng <lin.yinfeng@outlook.com>"]
license = "MIT"

[tool.poetry.scripts]
nix-gc-s3 = "nix_gc_s3.main:main"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "*"
click = "*"
click-log = "*"

[tool.poetry.dev-dependencies]
# currently nothing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
