[project]
name = "nix-gc-s3"
version = "0.0.2"
description = "A naive nix gc implementation for s3 store."
authors = [{ name = "Lin Yinfeng", email = "lin.yinfeng@outlook.com" }]
requires-python = ">=3.11,<4"
license = "MIT"
dependencies = ["boto3", "click", "click-log"]

[project.scripts]
nix-gc-s3 = "nix_gc_s3.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
